/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

 import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Energinet.DataHub.MeteringPoints.Contracts";

message Address {
  google.protobuf.StringValue streetName = 1;
  google.protobuf.StringValue postCode = 2;
  google.protobuf.StringValue cityName = 3;
  google.protobuf.StringValue countryCode = 4;
  google.protobuf.BoolValue actualAddressIndicator = 5;
  google.protobuf.StringValue buildingNumber = 6;
  google.protobuf.StringValue streetCode = 7;
  google.protobuf.StringValue floorIdentification = 8;
  google.protobuf.StringValue roomIdentification = 9;
  google.protobuf.StringValue municipalityCode = 10;
  google.protobuf.StringValue cityNameSubDivision = 11;
  google.protobuf.StringValue geoInfoReference = 12;
}

message MasterDataDocument {
  string gsrnNumber = 1;
  google.protobuf.StringValue typeOfMeteringPoint = 2;
  google.protobuf.StringValue subTypeOfMeteringPoint = 3;
  google.protobuf.StringValue meterReadingOccurrence = 4;
  google.protobuf.StringValue maximumCurrent = 5;
  google.protobuf.StringValue maximumPower = 6;
  google.protobuf.StringValue meteringGridArea = 7;
  google.protobuf.StringValue powerPlant = 8;
  google.protobuf.StringValue locationDescription = 9;
  google.protobuf.StringValue parentRelatedMeteringPoint = 10;
  Address installationLocationAddress = 11;
  google.protobuf.StringValue settlementMethod = 12;
  google.protobuf.StringValue unitType = 13;
  google.protobuf.StringValue disconnectionType = 14;
  string occurenceDate = 15;
  google.protobuf.StringValue meterNumber = 16;
  string transactionId = 17;
  google.protobuf.StringValue physicalStatusOfMeteringPoint = 18;
  google.protobuf.StringValue netSettlementGroup = 19;
  google.protobuf.StringValue connectionType = 20;
  google.protobuf.StringValue assetType = 21;
  google.protobuf.StringValue fromGrid = 22;
  google.protobuf.StringValue toGrid = 23;
  google.protobuf.StringValue productType = 24;
  google.protobuf.StringValue measureUnitType = 25;
  google.protobuf.StringValue physicalConnectionCapacity = 26;
  google.protobuf.StringValue scheduledMeterReadingDate = 27;
  string processType = 28;
  google.protobuf.BoolValue productionObligation = 29;
}

message CreateDefaultChargeLinks {
    string gsrnNumber = 1;
    string correlationId = 2;
}

message CreateDefaultChargeLinksMessages {
    string gsrnNumber = 1;
    string correlationId = 2;
}

message AddEnergySupplier {
  string id = 1;
  string metering_point_id = 2;
  google.protobuf.Timestamp effective_date = 3; // Date which the change of supplier goes into effect.
  string energy_supplier_gln = 4;
}

message SendAccountingPointCharacteristicsMessage {
  string id = 1;
  string metering_point_id = 2;
  string transation_id = 3;
  string reason = 4;
}

message MeteringPointEnvelope {
  oneof MeteringPointMessages {
    MasterDataDocument masterDataDocument = 1;
    CreateDefaultChargeLinks createDefaultChargeLinks = 2;
    SendAccountingPointCharacteristicsMessage sendAccountingPointCharacteristicsMessage = 5;
    AddEnergySupplier addEnergySupplier = 6;
  }
}
